# alya

./: .gitignore  CMakeLists.txt  conanfile.py  conanfile.txt
include/alya/async/: delay.hpp  execute.hpp  executor.hpp  inline_executor.hpp  promise.hpp
include/alya/async/details/: awaitable.hpp  coroutine_promise.hpp  execute_impl.hpp  is_promise.hpp  promise_awaitable_handler.hpp  promise_callback_wrapper.hpp  promise_common_handler.hpp  promise_handler_base.hpp  promise_impl.hpp  promise_next_value_type.hpp  promise_propagate_state_handler.hpp  promise_storage.hpp
include/alya/audio/: basic_channel.hpp  basic_context.hpp  basic_decoder.hpp  basic_engine.hpp  basic_sample.hpp  basic_sample_player.hpp  buffer_iterator.hpp  decoder_base.hpp  decoder_error.hpp  engine.hpp
include/alya/audio/core/: bad_device_id.hpp  bad_wave_format.hpp  basic_buffer.hpp  basic_context.hpp  basic_endpoint.hpp  basic_system_endpoint.hpp  buffer.hpp  context_base.hpp  device.hpp  device_enumerator.hpp  device_id.hpp  device_list_events.hpp  device_lost.hpp  endpoint_base.hpp  frame.hpp  sample.hpp  system_endpoint_base.hpp  wave_format.hpp
include/alya/audio/core/details/: device_list_event_type.hpp  notification_client.hpp  sample_type.hpp  wasapi_fwd.hpp
include/alya/graphics/: attribute_stream.hpp  attribute_stream_base.hpp  basic_buffer.hpp  basic_color_buffer_view.hpp  basic_context.hpp  basic_depth_stencil_buffer_view.hpp  basic_frame_buffer.hpp  basic_texture2d.hpp  basic_texture2d_array.hpp  buffer_base.hpp  color_buffer_view.hpp  color_buffer_view_base.hpp  constant_buffer.hpp  context.hpp  context_base.hpp  depth_stencil_buffer_view.hpp  depth_stencil_buffer_view_base.hpp  depth_stencil_state.hpp  depth_stencil_value.hpp  exceptions.hpp  frame_buffer.hpp  frame_buffer_base.hpp  memory_qualifier.hpp  pixel_shader.hpp  sampler.hpp  texture2d.hpp  texture2d_base.hpp  texture_view.hpp  vertex_buffer.hpp  vertex_shader.hpp  vertex_stream.hpp  vertex_stream_base.hpp
include/alya/graphics/core/: attribute_stream.hpp  attribute_stream_base.hpp  basic_buffer.hpp  basic_color_buffer_view.hpp  basic_context.hpp  basic_depth_stencil_buffer_view.hpp  basic_frame_buffer.hpp  basic_texture2d.hpp  basic_texture2d_array.hpp  buffer_base.hpp  buffer_binding.hpp  color_buffer_view.hpp  color_buffer_view_base.hpp  constant_buffer.hpp  context.hpp  context_base.hpp  depth_stencil_buffer_view.hpp  depth_stencil_buffer_view_base.hpp  depth_stencil_state.hpp  depth_stencil_value.hpp  exceptions.hpp  frame_buffer.hpp  frame_buffer_base.hpp  map.hpp  memory_qualifier.hpp  pixel_shader.hpp  sampler.hpp  shader_tags.hpp  texture2d.hpp  texture2d_base.hpp  texture_binding.hpp  texture_view.hpp  vertex_buffer.hpp  vertex_shader.hpp  vertex_stream.hpp  vertex_stream_base.hpp
include/alya/graphics/core/details/: attribute_signature.hpp  context_base_fwd.hpp  debug.hpp  map_type.hpp  mipmap_source.hpp  pixel_type.hpp
include/alya/graphics/details/: debug.hpp
include/alya/graphics/details/d3d11/: d3d.hpp  object_base.hpp  usage_traits.hpp
include/alya/graphics/details/dxgi/: debug_queue.hpp  format.hpp
include/alya/resource/: async_import.hpp  async_load.hpp  bad_format.hpp  bad_source.hpp  basic_image.hpp  file_loader.hpp  file_reader.hpp  image.hpp  importable.hpp  loadable_traits.hpp  loader.hpp  reader.hpp
include/alya/resource/details/: image_import_impl.hpp
include/alya/ui/core/: basic_window.hpp  desktop.hpp  event_base.hpp  events.hpp  get_event.hpp  key.hpp  window.hpp  window_base.hpp
include/alya/ui/core/details/: window_class.hpp
include/alya/utility/: assert.hpp  bitmask.hpp  deffer.hpp  expected.hpp  function.hpp  image.hpp  image_view.hpp  normalized.hpp  pixel_traits.hpp  string.hpp  unique_handle.hpp
include/alya/utility/windows/: win32_error.hpp
include/alya/utility/windows/com/: create_instance.hpp  intialize.hpp  (+2 more)
src/async/: CMakeLists.txt  delay.cpp
src/audio/: CMakeLists.txt  decoder_base.cpp  decoder_error.cpp
src/audio_core/: CMakeLists.txt  context_base.cpp  device.cpp  device_enumerator.cpp
src/audio_core/details/impl/: wasapi_audio_client.cpp  wasapi_clock_adjustment.cpp  wasapi_device.cpp  wasapi_device_enumerator.cpp  wasapi_render_client.cpp
src/graphics/: CMakeLists.txt  buffer_base.cpp  color_buffer_view_base.cpp  context_base.cpp  depth_stencil_buffer_view_base.cpp  frame_buffer_base.cpp  pixel_shader.cpp  sampler.cpp  texture2d_base.cpp  texture_view.cpp  vertex_shader.cpp  vertex_stream_base.cpp
src/graphics/dxgi/: debug_queue.cpp
src/graphics_core/: CMakeLists.txt  buffer_base.cpp  color_buffer_view_base.cpp  context_base.cpp  depth_stencil_buffer_view_base.cpp  frame_buffer_base.cpp  pixel_shader.cpp  sampler.cpp  texture2d_base.cpp  texture_view.cpp  vertex_shader.cpp  vertex_stream_base.cpp
src/graphics_core/details/impl/: d3d11_buffer.cpp  d3d11_context.cpp  d3d11_default_frame_buffer.cpp  d3d11_depth_stencil_view.cpp  d3d11_device.cpp  d3d11_frame_buffer.cpp  d3d11_input_layout.cpp  d3d11_pixel_shader.cpp  d3d11_render_target_view.cpp  d3d11_sampler.cpp  d3d11_shader_resource_view.cpp  d3d11_texture2d.cpp  d3d11_texture2d_array.cpp  d3d11_vertex_shader.cpp  d3d11_vertex_stream_base.cpp  dxgi_debug_queue.cpp  dxgi_info_queue.cpp  dxgi_swap_chain.cpp
src/graphics_core/dxgi/: debug_queue.cpp
src/resource/: CMakeLists.txt  file_loader.cpp  file_reader.cpp  image_import_impl.cpp
src/ui_core/: CMakeLists.txt  get_event.cpp  key.cpp  window_base.cpp
src/utility/: CMakeLists.txt
src/utility/windows/: win32_error.cpp
src/utility/windows/com/: create_instance.cpp  initialize.cpp  shared_ptr_base.cpp
test_apps/: CMakeLists.txt
test_apps/audio_dev/: CMakeLists.txt  main.cpp
test_apps/basic/: CMakeLists.txt  main.cpp
test_apps/gl_dev/: CMakeLists.txt  help.cpp  help.hpp  main.cpp  model.cpp  model.hpp  scene.hpp  stb_image.cpp
test_apps/gl_dev/shaders/1/: f.glsl  v.glsl
test_apps/gl_dev/shaders/2/: f.glsl
test_apps/gl_dev/shaders/3/: a.hlsl  b.hlsl  c.h  d1.hlsl  d2.hlsl  m1.hlsl  m2.hlsl
test_apps/promise/: CMakeLists.txt
(+34 files in other folders)
